Fri Oct 04 09:38:16 GMT 2013  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* Makefile.am,generic/generic.mk: SVN -> git.

Tue Apr 16 23:42:09 GMT 2013  Olly Betts <olly@survex.com>

	* NEWS,configure.ac: Update for 1.2.15.

Tue Apr 16 10:41:18 GMT 2013  Olly Betts <olly@survex.com>

	* NEWS: Update from ChangeLog.

Fri Apr 05 04:01:24 GMT 2013  Olly Betts <olly@survex.com>

	* perl/Search/Xapian/Stem.pm: Fix doc typo: "as as" -> "as a"

Thu Apr 04 11:10:18 GMT 2013  Olly Betts <olly@survex.com>

	* configure.ac: Fix --enable-quiet to actually work for the bindings.

Mon Mar 18 10:38:05 GMT 2013  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* configure.ac: Fix deprecation warning from Ruby 1.9.3.

Thu Mar 14 22:38:59 GMT 2013  Olly Betts <olly@survex.com>

	* NEWS,configure.ac: Update for 1.2.14.

Thu Mar 14 12:43:37 GMT 2013  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* python/extra.i: Fix typo in doccomment.

Thu Mar 14 11:35:36 GMT 2013  Olly Betts <olly@survex.com>

	* php/Makefile.am,php/add-php-ref-handling,php/smoketest.php: Keep
	  references to the PHP wrapper object when an object is set on
	  another object.  (Fixes #614)

Thu Mar 07 09:42:42 GMT 2013  Olly Betts <olly@survex.com>

	* NEWS: Update from ChangeLog.

Sat Feb 16 08:30:59 GMT 2013  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* configure.ac: Allow TCL_INC to be passed to configure.  (fixes #612)

Wed Jan 09 11:16:53 GMT 2013  Olly Betts <olly@survex.com>

	* NEWS,configure.ac: Update for 1.2.13.

Wed Jan 09 10:45:08 GMT 2013  Olly Betts <olly@survex.com>

	* README,php/docs/index.html: Document problem with PHP 5.4.

Sat Nov 10 08:07:37 GMT 2012  Olly Betts <olly@survex.com>

	* NEWS: Update from ChangeLog.

Thu Nov 08 02:25:49 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* perl/t/databasemodified.t,perl/t/index.t,perl/t/parser.t: Using
	  UNIVERSAL::isa() as a function is deprecated.
